--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "axios": "^0.19.0",
+    "core-js": "^3.3.2",
+    "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
