--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,15 @@
 server {
   listen 80;
+  location /login {
+		proxy_pass http://web:3000/login;
+	}
+  location /about {
+		proxy_pass http://web:3000/about;
+	}
   location / {
-    # We try to get static files from nginx first
-    # because node is not great at IO operations
-    # 80 포트로 / 접속을 하는 경우 web 으로 리다이렉트한다.
     try_files $uri $uri/ @web;
   }
   location @web {
     proxy_pass http://web:3000;
-  }  
+  }
 }
